--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,17 @@
 [package]
 name = "never-a-rainy-day"
 description = "Control the weather"
-version = "24.12.31"
+version = "25.6.5"
 edition = "2021"
+
 [dependencies]
+copy_dir = {version = "^0.1" }
+notify = { version = "^5.1", default-features = false, features = ["macos_kqueue"] }
+tokio = { version = "^1.11", features = ["full"] }
+clap = { version = "^4.0", features = ["derive", "env", "wrap_help"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = { version = "1", features = ["raw_value"] }
+anyhow = { version = "^1.0" }
+zip = { version = "^0.6" }
+walkdir = { version = "^2.3" }
+fs_extra = { version = "^1.3.0" }
